<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/to_home"
        android:contentDescription="@string/to_main_screen_content_description"
        android:icon="@drawable/ic_home"
        android:title="@string/to_main_screen"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:contentDescription="@string/search_content_description"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:contentDescription="@string/delete_text_content_description"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_text"
        app:showAsAction="ifRoom" />
<!--
    <item
        android:id="@+id/filter"
        android:contentDescription="@string/filter_text_content_description"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/cloud_storage"
        android:contentDescription="@string/to_cloud_storage_content_description"
        android:icon="@drawable/ic_delete"
        android:title="@string/to_cloud_storage"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:contentDescription="@string/settings_content_description"
        android:icon="@drawable/ic_delete"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />-->
</menu>